fixed button functionality in smaller viewports by changing z-index

--- a/client/src/assets/demo/demo.css
+++ b/client/src/assets/demo/demo.css
@@ -556,3 +556,8 @@ opacity:0.6;
 /* #welcome_text:hover{
 color: rgb(55, 55, 122);
 } */
+
+/* on smaller viewports buttons were not being recognized since images had a higher z-index than said buttons */
+.button {
+  z-index: 50;
+}
